v1.1.1 - Fixing Store Rewards And Breeding